--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* NAV */
     .nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
     .logo{display:flex;align-items:center;gap:10px;font-weight:800}
-    .logo img{height:28px;width:auto}
+    .logo img{height:40px;width:auto}
     .btn{display:inline-block;padding:12px 16px;border-radius:12px;font-weight:700;text-decoration:none;white-space:nowrap}
     .btn.primary{background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff}
     .btn.secondary{border:1px solid var(--brand);color:var(--brand)}
@@ -88,7 +88,7 @@
   <div class="wrap">
     <!-- NAV -->
     <nav class="nav">
-      <div class="logo"><img src="logo.png" alt="JobSprint logo"> JobSprint</div>
+      <div class="logo"><img src="logo.png" alt="JobSprint logo"></div>
       <div class="cta">
         <a class="btn secondary" href="#how">How it works</a>
         <a class="btn primary" href="#pricing">₹999 / 90 days</a>
@@ -222,3 +222,4 @@
   </div>
 </body>
 </html>
+
