--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="wrap">
     <!-- NAV -->
     <nav class="nav">
-      <div class="logo"><img src="Media.png" alt="JobSprint logo"></div>
+      <div class="logo"><img src="logo.png" alt="JobSprint logo"></div>
       <div class="cta">
         <a class="btn secondary" href="#how">How it works</a>
         <a class="btn primary" href="#pricing">₹999 / 90 days</a>
@@ -222,6 +222,7 @@
   </div>
 </body>
 </html>
+
 
 
 
