--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     .copy{max-width:600px;line-height:1.7}
     .sub{font-size:18px;color:var(--muted);line-height:1.6;margin:12px 0}
     .hero-cta{display:flex;gap:12px;flex-wrap:wrap;margin-top:18px}
-    .illus{background:var(--card);border:1px solid var(--line);border-radius:16px;height:280px;display:grid;place-items:center;color:var(--muted)}
-    .illus svg{width:84%;max-width:460px}
+    .illus{background:var(--card);border:1px solid var(--line);border-radius:16px;min-height:280px;display:grid;place-items:center;color:var(--muted);padding:16px}
+    .illus img{width:100%;max-width:100%;height:auto;display:block;border-radius:12px;box-shadow:0 12px 24px rgba(10,102,194,0.08)}
     .scroll-cue{position:absolute;bottom:14px;left:50%;transform:translateX(-50%);opacity:.8;font-size:13px;color:var(--muted)}
 
     /* SECTION BASE */
@@ -75,7 +75,7 @@
       .h1{font-size:32px}
       .hero{min-height:auto;padding:48px 20px}
       .hero-grid{grid-template-columns:1fr}
-      .illus{height:200px}
+      .illus{min-height:200px}
       .cards{grid-template-columns:1fr}
       .step{grid-template-columns:1fr}
       .price-grid{grid-template-columns:1fr}
@@ -109,18 +109,8 @@
             <a class="btn secondary" href="#comfort">Learn How It Works</a>
           </div>
         </div>
-        <div class="illus" aria-hidden="true">
-          <svg viewBox="0 0 600 360" role="img" aria-label="Job pipeline illustration">
-            <defs><linearGradient id="g1" x1="0" x2="1"><stop offset="0%" stop-color="var(--brand)"/><stop offset="100%" stop-color="var(--brand2)"/></linearGradient></defs>
-            <rect x="24" y="40" width="360" height="36" rx="10" fill="url(#g1)" opacity="0.15"/>
-            <rect x="24" y="120" width="300" height="36" rx="10" fill="url(#g1)" opacity="0.20"/>
-            <rect x="24" y="200" width="240" height="36" rx="10" fill="url(#g1)" opacity="0.25"/>
-            <circle cx="480" cy="180" r="64" fill="url(#g1)" opacity="0.15"/>
-            <text x="36" y="64" font-size="14" fill="var(--muted)">Applications</text>
-            <text x="36" y="144" font-size="14" fill="var(--muted)">Screening / Calls</text>
-            <text x="36" y="224" font-size="14" fill="var(--muted)">Interviews</text>
-            <text x="440" y="186" font-size="16" fill="var(--brand)">Offer 🎉</text>
-          </svg>
+        <div class="illus">
+          <img src="Media.jpg" alt="Illustration of a job application pipeline board with stages from applied to offer" loading="lazy">
         </div>
       </div>
       <div class="scroll-cue"><a href="#comfort" style="text-decoration:none;color:var(--muted)">See how it works ↓</a></div>
