--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="illus">
-          <img src="Media.jpg" alt="Illustration of a job application pipeline board with stages from applied to offer" loading="lazy">
+          <img src="Media.png" alt="Illustration of a job application pipeline board with stages from applied to offer" loading="lazy">
         </div>
       </div>
       <div class="scroll-cue"><a href="#comfort" style="text-decoration:none;color:var(--muted)">See how it works ↓</a></div>
@@ -212,6 +212,7 @@
   </div>
 </body>
 </html>
+
 
 
 
