--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
       <p>© 2025 JobSprint. All rights reserved.</p>
     </footer>
   </div>
-  <!-- ⬇️ Paste Razorpay script block right here -->
+  
+    <!-- Razorpay Payment Script -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
     async function startPayment() {
@@ -224,15 +225,23 @@
           amount: data.amount,
           currency: data.currency,
           name: 'JobSprint',
-          description: '90-day access',
+          description: '90-day JobSprint access',
           order_id: data.orderId,
           theme: { color: '#0a66c2' },
           handler: function (response) {
-            window.location.href = '/thank-you.html?pid=' + encodeURIComponent(response.razorpay_payment_id);
+            // ✅ Redirect user to thank-you page after successful payment
+            window.location.href = '/thank-you.html?pid=' 
+              + encodeURIComponent(response.razorpay_payment_id);
+          },
+          prefill: {
+            name: '',
+            email: '',
+            contact: ''
           }
         };
 
-        new Razorpay(options).open();
+        const rzp = new Razorpay(options);
+        rzp.open();
       } catch (e) {
         alert('Could not start payment. Please try again.');
         console.error(e);
@@ -241,6 +250,7 @@
   </script>
 </body>
 </html>
+
 
 
 
