--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <li>✔ Analytics & progress dashboard</li>
             <li>✔ Interview preparation (practice & guidance)</li>
           </ul>
-          <div class="price-cta"><a href="#buy" class="btn primary">Start Your Sprint</a></div>
+          <div class="price-cta"><a href="javascript:void(0)" onclick="startPayment()" class="btn primary">Start Your Sprint</a></div>
         </div>
         <div class="price-card" aria-disabled="true">
           <div class="badge">Coming soon</div>
@@ -250,6 +250,7 @@
   </script>
 </body>
 </html>
+
 
 
 
