--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <li>✔ CRM-style application tracker</li>
             <li>✔ Analytics & progress dashboard</li>
           </ul>
-          <p class="plan-desc">🟢 For serious job seekers who want clarity, consistency, & progress tracking.</p>
+          <p class="plan-desc">🟢 For serious job seekers wanting clarity, consistency, & progress tracking.</p>
           <div class="price-cta"><a href="javascript:void(0)" onclick="startPayment()" class="btn primary">Start Your 90-Day Sprint</a></div>
         </div>
         <div class="price-card">
@@ -270,6 +270,7 @@
   </script>
 </body>
 </html>
+
 
 
 
