--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .price-grid{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:16px;align-items:stretch;justify-items:center;margin-top:40px}
     .badge{display:inline-block;background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff;border-radius:999px;padding:6px 10px;font-size:12px;font-weight:700}
     .price-card{background:#fff;border:1px solid var(--line);border-radius:18px;padding:32px 32px 48px;max-width:360px;margin:0 auto;display:flex;flex-direction:column;align-items:stretch;text-align:left;transition:transform .25s ease,box-shadow .25s ease}
-    .price-card.highlight{border:2px solid var(--brand);box-shadow:0 20px 40px rgba(10,102,194,0.2);position:relative;transform:translateY(-10px) scale(1.04);z-index:2}
+    .price-card.highlight{border:2px solid var(--brand);box-shadow:0 20px 40px rgba(10,102,194,0.2);position:relative;transform:translateY(-10px) scale(1.04);z-index:2;padding-bottom:56px}
     .price-card.highlight .badge{position:absolute;top:20px;right:20px}
     .price{font-size:42px;font-weight:800;margin:12px 0;color:var(--brand)}
     .price span{font-size:16px;font-weight:500;color:var(--muted)}
@@ -270,6 +270,7 @@
   </script>
 </body>
 </html>
+
 
 
 
