--- a/signup.html
+++ b/signup.html
@@ -71,17 +71,10 @@
           <div class="logo-badge">J</div>
           <div>
             <div style="font-weight:700">Welcome to JobSprint</div>
-            <div class="sub">Get started with your email or Google account</div>
+            <div class="sub">Get started with your Google account</div>
           </div>
         </div>
 
-        <form id="emailForm" onsubmit="handleEmail(event)">
-          <label for="identity">Enter your email or phone number</label>
-          <input id="identity" type="text" placeholder="you@example.com or 98765 43210" autocomplete="email" />
-          <button class="btn" type="submit">Continue</button>
-        </form>
-
-        <div class="divider"><div class="line"></div><span>or</span><div class="line"></div></div>
 
         <!-- Google sign-in -->
         <div id="g_id_onload"
