--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <nav class="nav">
       <div class="logo"><img src="logo.png" alt="JobSprint logo"></div>
       <div class="cta">
-        <a class="btn secondary" href="#how">How it works</a>
+        <a class="btn secondary" href="signup.html?mode=login">Log In</a>
         <a class="btn primary" href="#pricing">₹999 / 90 days</a>
       </div>
     </nav>
@@ -284,6 +284,7 @@
   </script>
 </body>
 </html>
+
 
 
 
