--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <li>✔ Interview preparation — give mock interviews with tailored question sets</li>
             <li>✔ Advanced analytics dashboard</li>
           </ul>
-          <p class="plan-desc">🟢 For john cena seekers who want a more detailed, data-backed job search experience.</p>
+          <p class="plan-desc">🟢 For job seekers who want a more detailed, data-backed job search experience.</p>
           <div class="price-cta"><a class="btn secondary" href="#pricing">Join the Pro+ Waitlist</a></div>
         </div>
       </div>
@@ -284,6 +284,7 @@
   </script>
 </body>
 </html>
+
 
 
 
